# Graphite

./: .gitignore  LICENSE  README.md  run_client.bat
.github/workflows/: build.yml
crates/: Cargo.toml
crates/graphite-api/: Cargo.toml
crates/graphite-api/src/: commands.rs  lib.rs  mod_trait.rs  protocol.rs  world.rs
crates/graphite-core/: Cargo.toml  build.rs
crates/graphite-core/src/: bridge.rs  lib.rs  mod_loader.rs  shared_mem.rs  tick_loop.rs  utils.rs
crates/graphite-test-mod/: Cargo.toml
crates/graphite-test-mod/src/: effects.rs  lib.rs
docs/: ARCHITECTURE.md  PUBLISHING.md
graphite-host/: build.gradle  gradle.properties  gradlew  gradlew.bat  settings.gradle
graphite-host/src/main/java/dev/graphite/host/: GraphiteHost.java  NativeBridge.java  NativeLoader.java  SharedMemory.java
graphite-host/src/main/java/dev/graphite/host/commands/: CommandQueueReader.java  CommandType.java
graphite-host/src/main/java/dev/graphite/host/snapshot/: EntityKind.java  WorldSnapshotWriter.java
scripts/: verify_layout.py
