[package]
name = "graphite-core"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ctor = "0.2"
env_logger = "0.11"
graphite-api = { path = "../graphite-api" }
jni = { version = "0.21", features = ["invocation"] }
libloading = "0.8"
log = "0.4"
notify = "6.1"
rustc_version_runtime = "0.3"
tempfile = "3.10"
